--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.12.2",
+    "framer": "^2.4.1",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.1",
+    "motion": "^10.18.0",
+    "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "quill": "^2.0.2",
+    "quill-image-resize-module": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "postcss": "^8",
