Add yml file and edit package json to create package

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bouken-blog",
   "version": "0.1.0",
   "private": true,
+  "publishConfig": {
+    "@thecodingrunner:registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
