--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "quill-image-resize-module": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "react-quill": "^2.0.0"
   },
   "devDependencies": {
