--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0"
   },
   "devDependencies": {
