--- a/fly.toml
+++ b/fly.toml
@@ -1,15 +1,17 @@
-# fly.toml app configuration file generated for bouken-blog on 2024-06-13T23:39:24+01:00
+# fly.toml app configuration file generated for boukenblog on 2025-02-21T18:20:16Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'bouken-blog'
+app = 'boukenblog'
 primary_region = 'lhr'
+
+[build]
 
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
