--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "firebase": "^10.12.2",
     "framer": "^2.4.1",
     "mongodb": "^6.7.0",
@@ -25,7 +26,7 @@
     "react-quill": "^2.0.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
